# thesis-code-

./: CMakeLists.txt  README.md  package.xml
assets/table/: table.urdf
src/: analyse_data.py  analyse_data_actions.py  analyse_data_everyone_turns.py  analyse_data_force.py  analyse_data_learning_curve.py  analyse_data_pauses.py  analyse_data_rl.py  analyse_data_turns.py  analyse_data_video.py  map_1.py  run_main.py  sigma7_haptic_node.cpp  sigma7_puck_debug.py  train_collaboratively.py  train_collaboratively_direct_force.py  train_collaboratively_ps5.py  train_main.py
src/controllers/: Camercontroller.py  Sigma7_controller.py  impedance_sim.py  ps5_human_control.py  ps5_human_control_impedance.py  rule_based_human_controller.py  some old impedance code functions.py  train_collaboratively_ps5.py
src/rl_env/: albert_table_env copy.py  albert_table_env.py  obstacles_and_sensing.py
src/utils/: parquet_logger.py  timer.py
src/versions_old/: albert_spawn.py  albert_table_env_obstacle try.py  albert_table_impedance_control.py  albert_table_simple_connection.py  complicated_train_albert_sac.py  no_yaw_error_train_albert_sac.py  robot_oriented_train_albert_table_sac.py  run_albert_sac_drive_anywhere.py  run_albert_table_sac_copy.py  train_albert_sac_500_episodes.py  train_albert_sac_drive_anywhere.py  train_albert_table_human_sac_just_force_impedance_and_human_passive_control.py  train_albert_table_human_sac_working_pulling_only.py  train_albert_table_sac_copy.py  train_albert_table_sac_fixyaw_simplebackwards.py  train_albert_table_sac_v1.py  train_albert_table_sac_zonebonus.py
src/versions_old/old_versions_with_human/: run_albert_table_human_sac.py  run_albert_table_human_sac_rule_based_human.py  run_albert_table_human_sac_v1.py  train_albert_table_human_sac.py  train_albert_table_human_sac_rule_based_human.py  (+2 more)
